[package]
name = "co"
description = "An asynchronous scripting language"
authors = ["Joey Territo <jtt9340@rit.edu>"]
version = "0.1.0"
edition = "2021"

[dependencies]
# PEG parser combinators using operator overloading without macros
pom = "3.2.0"
# Fast floating-point number parser
fast-float = "0.2.0"
# Statically allocated data structures
once_cell = "1.12.0"
